--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # dependencies
 /node_modules
 
-# Archives
-/site/.DS_Store
-/site/public/.DS_Store
-
+# misc
+.DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+npm-debug.log*
