--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # dependencies
 /node_modules
 
+# ignore all logs
+*.log
+
 # misc
-.DS_Store
+*.DS_Store
 .env.local
 .env.development.local
 .env.test.local
